--- a/src/layout/style/Header.css
+++ b/src/layout/style/Header.css
@@ -1,45 +1,1 @@
-.breadcrumb-download {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.6rem;
-    background-color: #f6f8fc;
-    margin-top: 1rem;
-    margin-left: 1rem;
-}
-
-.user-name {
-    font-size: 1rem;
-    color: #333;
-    font-weight: bold;
-    margin-left: 20px;
-  }
-  
-
-.breadcrumb-title {
-    font-size: 1.8rem;
-    font-weight: bold;
-    color:#5603ad;
-    font-family: "Urbanist", sans-serif;
-}
-
-.breadcrumb-list {
-    display: flex;
-    gap: 0.5rem;
-    color: #6B7280;
-    font-size: 0.875rem;
-}
-
-.breadcrumb-link {
-    color: inherit;
-    text-decoration: none;
-}
-
-.breadcrumb-link:hover {
-    text-decoration: underline;
-}
-
-.breadcrumb-active {
-    color:#5603ad;
-    text-decoration: none;
-}
+.breadcrumb-download{display:flex;justify-content:space-between;align-items:center;padding:1.6rem;background-color:#f6f8fc;margin-top:1rem;margin-left:1rem}.user-name{font-size:1rem;color:#333;font-weight:700;margin-left:20px}.breadcrumb-title{font-size:1.8rem;font-weight:700;color:#5603ad;font-family:"Urbanist",sans-serif}.breadcrumb-list{display:flex;gap:.5rem;color:#6B7280;font-size:.875rem}.breadcrumb-link{color:inherit;text-decoration:none}.breadcrumb-link:hover{text-decoration:underline}.breadcrumb-active{color:#5603ad;text-decoration:none}
