--- a/src/layout/style/Sidebar.css
+++ b/src/layout/style/Sidebar.css
@@ -1,16 +1,17 @@
-
 .sidebar {
-    height: 100vh;
-    background-color: #ffffff;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1.5rem;
-    border-radius: 1.5rem;
-    overflow: hidden;
-  }
+  height: 100vh;
+  background-color: #ffffff;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1.5rem;
+  border-radius: 0 1.5rem 1.5rem 0;
+  overflow: hidden;
+  position: relative;
+  z-index: 10;
+}
   /* Estilo de los iconos  */
   .sidebar.collapsed {
     width: 100px;
@@ -122,6 +123,8 @@
     padding-top: 1.5rem;
     transition: opacity 0.3s ease;
   }
+
+  
   
   .logout-button {
     display: flex;
@@ -137,8 +140,8 @@
   }
   
   .logout-button:hover {
-    background: #f0f0f0;
-    border-radius: 6px;
+    background-color: #f8f5ff;
+    color: #5603ad;
   }
   
   .logout-icon {
@@ -151,5 +154,6 @@
   .logout-text {
     font-size: 14px;
   }
+  
   
   
