--- a/src/layout/style/Sidebar.css
+++ b/src/layout/style/Sidebar.css
@@ -87,12 +87,11 @@
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     color: #4a5568;
     text-decoration: none;
-    background-color: transparent;
   }
   
   .sidebar__link:hover {
     background-color: #f3f4f6;
-    color: #4a5568;
+    color: #5603ad;
     transform: translateX(5px);
   }
   
